cleaned up directory

--- a/flask_insight_notes/flask_baseball/flaskexample/templates/output.html
+++ b/flask_insight_notes/flask_baseball/flaskexample/templates/output.html
@@ -51,7 +51,7 @@
 
 </div> <!-- /.container-->
 
-
+               <img src="{{ url_for('static', filename='bp_hist/hist_Mike-Trout_Gerrit-Cole.png')}}">
 
 
    
