--- a/flask_insight_notes/flask_baseball/flaskexample/templates/baseball.html
+++ b/flask_insight_notes/flask_baseball/flaskexample/templates/baseball.html
@@ -43,7 +43,7 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-        <h1>Insight Baseball</h1>
+        <h1>Hey Better Batter</h1>
         <h4>A tool for predictions on batter-pitcher matchups</h4>
         <br>
         <p class="lead">Wondering which batter you should play when you know which pitcher he'll face? Or just curious who would win the matchup between Mike Trout and Gerrit Cole? Enter your matchup of interest.</p>
