updated notebook, added additional metrics

--- a/flask_insight_notes/flask_baseball/flaskexample/templates/output.html
+++ b/flask_insight_notes/flask_baseball/flaskexample/templates/output.html
@@ -51,10 +51,9 @@
 
 </div> <!-- /.container-->
 
-               <img src="{{ url_for('static', filename='bp_hist/hist_Mike-Trout_Gerrit-Cole.png')}}">
-
-
-   
+                <img src="{{ url_for('static', filename='bp_hist/' + heatmap_filename)}}" alt="centered image" />
+                <img src="{{ url_for('static', filename='bp_hist/' + hist_filename) }}" alt="centered image" />
+               
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
