--- a/flask_insight_notes/flask_baseball/flaskexample/templates/baseball.html
+++ b/flask_insight_notes/flask_baseball/flaskexample/templates/baseball.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.1/assets/img/favicons/favicon.ico">
 
-    <title>Insight Baseball</title>
+    <title>Hey Better Batter</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/starter-template/">
 
