pushed files for site

--- a/flask_insight_notes/flask_baseball/flaskexample/templates/input.html
+++ b/flask_insight_notes/flask_baseball/flaskexample/templates/input.html
@@ -46,16 +46,24 @@
         </div>
     
         <div class = "container">
-    
           <form  action="/output" method="GET">
-            <div class="form-group">
-              <label for="batter">Batter:</label>
-              <input type="text" id="batter" name='batter' placeholder="e.g. Mike Trout">
-            </div>
 
             <div class="form-group">
-              <label for="pitcher">Pitcher:</label>
-              <input type="text" id="pitcher" name='pitcher' placeholder="e.g. Gerrit Cole">
+              <label for="batter_A">Batter_A:</label>
+              <input type="text" id="batter_A" name='batter_A' placeholder="e.g. Mike Trout">
+            </div>
+            <div class="form-group">
+              <label for="pitcher_A">Pitcher_A:</label>
+              <input type="text" id="pitcher_A" name='pitcher_A' placeholder="e.g. Gerrit Cole">
+            </div>
+
+          <div class="form-group">
+              <label for="batter_B">Batter_B:</label>
+              <input type="text" id="batter_B" name='batter_B' placeholder="e.g. Mookie Betts">
+            </div>
+            <div class="form-group">
+              <label for="pitcher_B">Pitcher_B:</label>
+              <input type="text" id="pitcher_B" name='pitcher_B' placeholder="e.g. Justin Verlander">
             </div>
 
 
