--- a/flask_insight_notes/flask_baseball/flaskexample/templates/output.html
+++ b/flask_insight_notes/flask_baseball/flaskexample/templates/output.html
@@ -51,8 +51,18 @@
 
 </div> <!-- /.container-->
 
-                <img src="{{ url_for('static', filename='bp_hist/' + heatmap_filename)}}" alt="centered image" />
-                <img src="{{ url_for('static', filename='bp_hist/' + hist_filename) }}" alt="centered image" />
+                <img src="{{ url_for('static', filename='bp_hist/' + matchup_results_fig)}}" alt="centered image" />
+
+  <div class="table_entrances" style="overflow-x: auto;">
+
+    <table id="table">
+  
+      <thead></thead> 
+      <tr></tr>
+  
+    </table>
+  
+  </div>
                
 
     <!-- Bootstrap core JavaScript
