got app working locally

--- a/flask_insight_notes/flask_baseball/flaskexample/templates/output_test.html
+++ b/flask_insight_notes/flask_baseball/flaskexample/templates/output_test.html
@@ -56,9 +56,10 @@
 
                 <img src="{{ url_for('static', filename='bp_hist/' + matchup_results_fig)}}" alt="centered image" />
 
+                {% for table in tables %}
+                {{titles[loop.index]}}
                 {{ table|safe }}
-              
-
+                {% endfor %}
                
 
     <!-- Bootstrap core JavaScript
