update for website

--- a/flask_insight_notes/flask_baseball/flaskexample/templates/baseball.html
+++ b/flask_insight_notes/flask_baseball/flaskexample/templates/baseball.html
@@ -46,7 +46,7 @@
         <h1>Hey Better Batter</h1>
         <h4>A tool for predictions on batter-pitcher matchups</h4>
         <br>
-        <p class="lead">Wondering which batter you should play when you know which pitcher he'll face? Or just curious who would win the matchup between Mike Trout and Gerrit Cole? Enter your matchup of interest.</p>
+        <p class="lead">Are you trying to decide between batters when you know the pitchers they will face? Or just wondering about the outome when Mike Trout and Gerrit Cole? </p>
         <a class="nav-link" href="/input">Click here to get started!</a>
       </div>
 
