--- a/flask_insight_notes/flask_baseball/flaskexample/templates/output.html
+++ b/flask_insight_notes/flask_baseball/flaskexample/templates/output.html
@@ -56,7 +56,10 @@
 
                 <img src="{{ url_for('static', filename='bp_hist/' + matchup_results_fig)}}" alt="centered image" />
 
-                {{ table|safe }}
+            <table>
+              {{ table|safe }}
+            </table>
+                
               
 
                
