--- a/flask_insight_notes/flask_baseball/flaskexample/static/css/starter-template.css
+++ b/flask_insight_notes/flask_baseball/flaskexample/static/css/starter-template.css
@@ -1,7 +1,13 @@
 body {
   padding-top: 50px;
 }
+
 .starter-template {
   padding: 40px 15px;
   text-align: center;
+}
+
+table.center {
+  margin-left:auto; 
+  margin-right:auto;
 }
